==> Yu-1120/STM32F103C8T6-exBoard/2-Software/23-12-17-OLED显示屏-DHT11/Hardware/Relay.c <==
#include "stm32f10x.h"                  // Device header

/**
  * 函    数：LED初始化
  * 参    数：无
  * 返 回 值：无
  */
void Relay_Init(void)
{
	/*开启时钟*/
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);		//开启GPIOA的时钟
	
	/*GPIO初始化*/
	GPIO_InitTypeDef GPIO_InitStructure;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_0;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOA, &GPIO_InitStructure);						//将PA1和PA2引脚初始化为推挽输出
	
	/*设置GPIO初始化后的默认电平*/
	GPIO_SetBits(GPIOA, GPIO_Pin_0);				//设置PA1和PA2引脚为高电平
}


void Relay_OFF(void)
{
	GPIO_SetBits(GPIOA, GPIO_Pin_0);		//设置PA1引脚为高电平
}


void Relay_ON(void)
{
	GPIO_ResetBits(GPIOA, GPIO_Pin_0);		//设置PA2引脚为低电平
}
